[package]
name = "rustbright"
version = "0.1.0"
edition = "2024"
authors = ["divadiahim", "confestim"]

[dependencies]
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
serde_json = "1.0.140"
